# molt

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: RELEASING.md
docs/capability-diffs/: 2026-07-worked-example.md  README.md
evals/: labels.json  run_evals.py
evals/fixtures/: CLAUDE.md  ablate_rules.md
evals/fixtures/transcripts/: s1.jsonl  s2.jsonl  s3.jsonl
molt/: __init__.py  ablate.py  cli.py  diffcmd.py  evidence.py  judge.py  prune.py  report.py  rules.py  transcripts.py
tests/: test_ablate.py  test_diff.py  test_molt.py  test_prune.py
